test/fail/redundant-ignore.mo
func f() {};

ignore ();
ignore f();
ignore { (); };
ignore ();
ignore (if true () else ());
